--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -44,11 +44,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             <div class="layout vertical flex">
                 <div class="layout horizontal flex">
                     <dude-graph-editor id="editor"
-                                       class="layout horizontal flex-3">
+                                       class="layout horizontal flex-3"
+                                       models="[[ models ]]">
                     </dude-graph-editor>
                     <dude-graph-inspector id="inspector"
-                                          class="layout horizontal flex"
-                                          models="[[ models ]]">
+                                          class="layout horizontal flex">
                     </dude-graph-inspector>
                 </div>
                 <dude-graph-toolbar id="toolbar"></dude-graph-toolbar>
