--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -133,6 +133,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             /**
              *
              */
+            "models": {
+                "type": Array,
+                "value": []
+            },
+
+            /**
+             *
+             */
             "loader": {
                 "type": dudeGraph.GraphLoader,
                 "value": null
@@ -223,7 +231,6 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             }, true);
         }
     });
-
     var defaultBlockTypes = [
         {"block": "Assignation", "type": dudeGraph.Assignation},
         {"block": "Condition", "type": dudeGraph.Condition},
