--- a/dude-graph-toolbar.html
+++ b/dude-graph-toolbar.html
@@ -87,7 +87,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @param {CustomEvent} e
              */
             action: function (e) {
-                var inspectorMethodName = e.target.parentNode.getAttribute("data-action");
+                var inspectorMethodName = e.target.parentNode.getAttribute("data-action") ||
+                        e.target.parentNode.parentNode.getAttribute("data-action");
                 var inspectorMethod = this.get("inspector")[inspectorMethodName];
                 if (!_.isUndefined(inspectorMethod)) {
                     inspectorMethod.call(this.get("inspector"), e);
