--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -129,32 +129,17 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                         {"keys": ["ctrl+s", "meta+s"], "action": "shortcutSave"},
                         {"keys": ["ctrl+b", "meta+b"], "action": "shortcutBuild"},
                         {"keys": ["del", "meta+backspace"], "action": "shortcutRemoveSelection"},
-                        {"keys": ["ctrl+alt+g", "meta+alt+g"], "action": "shortcutCreateGroup"},
+                        {"keys": ["ctrl+g", "meta+g"], "action": "shortcutCreateRenderGroup"},
                         {"keys": ["ctrl+0", "meta+0"], "action": "shortcutZoomToFit"},
                         {"keys": ["ctrl+shift+0", "meta+shift+0"], "action": "shortcutZoomToFit"}
                     ]
                 }
             },
 
-            /**
-             *
-             */
             _selectedRenderBlock: null,
-
-            /**
-             *
-             */
             _selectedRenderGroup: null,
-
-            /**
-             *
-             */
-            _showCreateRenderGroup: false,
-
-            /**
-             *
-             */
             _createRenderGroupName: null,
+            _showCreateRenderGroup: false,
 
             /**
              *
@@ -166,9 +151,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 this.set("keyEventTarget", document.body);
                 this.set("stopKeyboardEventPropagation", true);
                 _.forEach(this.get("keyboardShortcuts"), function (keyboardShortcut) {
-                    if (navigator.platform.toUpperCase().indexOf("MAC") === -1) { // Windows/Linux
+                    if (navigator.platform.toUpperCase().indexOf("MAC") === -1) {
                         inspector.addOwnKeyBinding(keyboardShortcut.keys[0], keyboardShortcut.action);
-                    } else { // Mac OSX
+                    } else {
                         inspector.addOwnKeyBinding(keyboardShortcut.keys[1] || keyboardShortcut.keys[0], keyboardShortcut.action);
                     }
                 });
@@ -190,6 +175,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @param {CustomEvent} e
              */
             shortcutSave: function (e) {
+                this.fire("dude-graph-inspector-save", this.get("editor").save());
                 e && e.detail && e.detail.keyboardEvent && e.detail.keyboardEvent.preventDefault();
             },
 
@@ -197,6 +183,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @param {CustomEvent} e
              */
             shortcutBuild: function (e) {
+                this.fire("dude-graph-inspector-build", "noop: not yet implemented");
                 e && e.detail && e.detail.keyboardEvent && e.detail.keyboardEvent.preventDefault();
             },
 
@@ -212,7 +199,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             /**
              * @param {CustomEvent} e
              */
-            shortcutCreateGroup: function (e) {
+            shortcutCreateRenderGroup: function (e) {
                 this.set("_showCreateRenderGroup", true);
                 e && e.detail && e.detail.keyboardEvent && e.detail.keyboardEvent.preventDefault();
             },
@@ -230,7 +217,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             },
 
             /**
-             *
+             * @private
              */
             _createRenderGroup: function () {
                 this.get("editor").get("renderer").createRenderGroupForSelection(this.get("_createRenderGroupName"));
@@ -241,6 +228,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             /**
              *
              * @param {CustomEvent} e
+             * @private
              */
             _createBlockFromModel: function (e) {
                 if (e.detail.item.data) {
@@ -263,6 +251,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              *
              * @param {dudeGraph.RenderBlock} renderBlock
              * @returns {Array<dudeGraph.RenderPoint>|null}
+             * @private
              */
             _getEditablePoints: function (renderBlock) {
                 if (renderBlock === null) {
