--- a/demo/electron/index.html
+++ b/demo/electron/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <link rel="import" href="bower_components/dude-style/dude-style.html">
+    <link rel="import" href="dude-graph-electron.html">
 </head>
 <body>
+<dude-graph-electron></dude-graph-electron>
 </body>
 </html>
