Fixed some style related bugs.

--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -98,6 +98,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         ::content .dude-graph-point {
             cursor: pointer;
         }
+        #autocomplete {
+            border-radius: 5px;
+            padding: 10px;
+            background: rgba(24, 25, 36, 0.8);
+        }
     </style>
     <template>
         <div class="layout flex horizontal">
