--- a/demo/electron/dude-graph-electron.html
+++ b/demo/electron/dude-graph-electron.html
@@ -7,6 +7,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <script>d3 = module.exports;</script>
 <script src="data.js"></script>
 <link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="bower_components/dude-graph/dude-graph-editor.html">
 <link rel="import" href="bower_components/dude-graph/dude-graph-inspector.html">
 <link rel="import" href="bower_components/dude-graph/dude-graph-toolbar.html">
@@ -15,12 +16,20 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <dom-module id="dude-graph-electron">
     <template>
+        <style>
+            #error {
+                color: var(--text-primary-color);
+                background: var(--paper-red-500);
+            }
+        </style>
         <div class="layout horizontal fit">
             <div class="layout vertical flex">
                 <div class="layout horizontal flex">
+                    <paper-toast id="error"></paper-toast>
                     <dude-graph-editor id="editor"
                                        class="layout horizontal flex-3"
-                                       models="[[ models ]]">
+                                       models="[[ models ]]"
+                                       on-dude-graph-editor-error="_error">
                     </dude-graph-editor>
                     <dude-graph-inspector id="inspector"
                                           class="layout horizontal flex"
@@ -62,6 +71,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             },
             _build: function (e) {
                 ipcRenderer.send("dude-graph-build", e.detail);
+            },
+            _error: function (e) {
+                this.$.error.text = e.detail.error;
+                this.$.error.show();
             }
         });
     </script>
