--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -98,6 +98,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         ::content .dude-graph-point {
             cursor: pointer;
         }
+
+        /**
+         * Autocomplete popup
+         */
         #autocomplete {
             border-radius: 5px;
             padding: 10px;
@@ -120,6 +124,34 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     </template>
 </dom-module>
 <script>
+    var defaultBlockTypes = [
+        {"block": "Assignation", "type": dudeGraph.Assignation},
+        {"block": "Condition", "type": dudeGraph.Condition},
+        {"block": "Delegate", "type": dudeGraph.Delegate},
+        {"block": "Each", "type": dudeGraph.Each},
+        {"block": "Function", "type": dudeGraph.Function},
+        {"block": "Getter", "type": dudeGraph.Getter},
+        {"block": "Instruction", "type": dudeGraph.Instruction},
+        {"block": "Operator", "type": dudeGraph.Operator},
+        {"block": "Range", "type": dudeGraph.Range},
+        {"block": "Variable", "type": dudeGraph.Variable}
+    ];
+    var defaultPointTypes = [
+        {"point": "Choice", "type": dudeGraph.Choice},
+        {"point": "Stream", "type": dudeGraph.Stream}
+    ];
+    var defaultRenderBlockTypes = [
+        {"renderBlock": "Assignation", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Condition", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Delegate", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Each", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Function", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Getter", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Instruction", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Operator", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Range", "type": dudeGraph.RenderBlock},
+        {"renderBlock": "Variable", "type": dudeGraph.RenderVariable}
+    ];
     var DudeGraphEditor = Polymer({
         is: "dude-graph-editor",
         behaviors: [Polymer.IronA11yKeysBehavior],
@@ -159,6 +191,30 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             /**
              *
              */
+            "blockTypes": {
+                "type": Array,
+                "value": defaultBlockTypes
+            },
+
+            /**
+             *
+             */
+            "pointTypes": {
+                "type": Array,
+                "value": defaultPointTypes
+            },
+
+            /**
+             *
+             */
+            "renderBlockTypes": {
+                "type": Array,
+                "value": defaultRenderBlockTypes
+            },
+
+            /**
+             *
+             */
             "loader": {
                 "type": dudeGraph.GraphLoader,
                 "value": null
@@ -185,24 +241,21 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
         /**
          *
-         * @param {Array<>} [blockTypes=defaultBlockTypes]
-         * @param {Array<>} [pointTypes=defaultPointTypes]
-         * @param {Array<>} [renderBlockTypes=defaultRenderBlockTypes]
          */
-        start: function (blockTypes, pointTypes, renderBlockTypes) {
+        start: function () {
             var editor = this;
             this.set("graph", new dudeGraph.Graph());
             this.set("renderer", new dudeGraph.Renderer());
             this.set("loader", new dudeGraph.GraphLoader());
             this.set("saver", new dudeGraph.GraphSaver());
             this.get("renderer").initialize(this.get("graph"), this.$["svg"]);
-            _.forEach(blockTypes || defaultBlockTypes, function (blockType) {
+            _.forEach(this.get("blockTypes"), function (blockType) {
                 this.get("loader").registerBlockType(blockType.block, blockType.type);
             }.bind(this));
-            _.forEach(pointTypes || defaultPointTypes, function (pointType) {
+            _.forEach(this.get("pointTypes"), function (pointType) {
                 this.get("loader").registerPointType(pointType.point, pointType.type);
             }.bind(this));
-            _.forEach(renderBlockTypes || defaultRenderBlockTypes, function (renderBlockType) {
+            _.forEach(this.get("renderBlockTypes"), function (renderBlockType) {
                 this.get("renderer").registerRenderBlock(renderBlockType.renderBlock, renderBlockType.type);
             }.bind(this));
             this.get("renderer").on("drop-connection", function (renderConnection, __, position) {
@@ -342,33 +395,4 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             this.$["autocompletePopup"].close();
         }
     });
-
-    var defaultBlockTypes = [
-        {"block": "Assignation", "type": dudeGraph.Assignation},
-        {"block": "Condition", "type": dudeGraph.Condition},
-        {"block": "Delegate", "type": dudeGraph.Delegate},
-        {"block": "Each", "type": dudeGraph.Each},
-        {"block": "Function", "type": dudeGraph.Function},
-        {"block": "Getter", "type": dudeGraph.Getter},
-        {"block": "Instruction", "type": dudeGraph.Instruction},
-        {"block": "Operator", "type": dudeGraph.Operator},
-        {"block": "Range", "type": dudeGraph.Range},
-        {"block": "Variable", "type": dudeGraph.Variable}
-    ];
-    var defaultPointTypes = [
-        {"point": "Choice", "type": dudeGraph.Choice},
-        {"point": "Stream", "type": dudeGraph.Stream}
-    ];
-    var defaultRenderBlockTypes = [
-        {"renderBlock": "Assignation", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Condition", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Delegate", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Each", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Function", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Getter", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Instruction", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Operator", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Range", "type": dudeGraph.RenderBlock},
-        {"renderBlock": "Variable", "type": dudeGraph.RenderVariable}
-    ];
 </script>
