Fixed create group shortcut

--- a/dude-graph-toolbar.html
+++ b/dude-graph-toolbar.html
@@ -40,7 +40,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             <dude-graph-tool class="flex"
                              icon="fa fa-square-o"
                              description="Create group for selection"
-                             data-action="shortcutCreateGroup"
+                             data-action="shortcutCreateRenderGroup"
                              on-click="action">
             </dude-graph-tool>
             <dude-graph-tool class="flex"
